# pres_project

./: .dockerignore  .gitignore  .rustc_info.json  Cargo.toml  Dockerfile  go.mod  main.go  start.sh
astro/: astro.config.mjs  package-lock.json  package.json  presentation.mdx
astro/src/: fetchAndParseMDX.ts  globals.css  presentation.tsx
astro/src/components/: title.css  title.tsx
astro/src/pages/: index.astro
astro/src/pages/api/: slides.ts
src/: main.rs
